  author when new comments are created.  Also, there is an option
  which determines if all reviewers are notified if the topic's state
  is changed.  This is all controlled by the $email_send_options
  configuration item.  From Jason Remillard.

* Added RSS support, so that the topic list screen now has an
  equivalent RSS view.  From Jason Remillard.

Version 1.8.5

* Complete support for VSS repositories.  Topics linked to a VSS
  repository can now be created by either specifying labels with the
  VSS directory of interest for code already committed in the
  repository, or pre-commit reviews can be done by generating diff
  text with the ssdiff.pl script in the Codestriker bin directory.

* Modified log_accum.pl so that deleted files are also included in the
  topic.

* On the topic list screen, there is a new button "Obsolete Topics",
  which allows you to create a new topic which superseeds the selected
  topics.  The obsoleted topics will be changed to state "Obsoleted"
  and will become read-only.  Note the @topic_states configuration
  variable in codestriker.conf needs to be modified to include the new
  'Obsoleted' state to enable this.  The view topic screens have been
  modified to include links if the topic being viewed has been
  obsoleted or superseeds other topics.  A single topic can be
  obsoleted from the view topic properties page, by selecting the
  'Obsoleted' state.

* The $allow_delete config variable has been removed.  If topic
  deletion is to be enabled, the 'Deleted' state needs to be added to
  the @topic_states configuration variable in codestriker.conf.

* Added new configuration variable @Codestriker::exclude_file_types
  which contains a list of filename extensions which Codestriker will
  ignore when creating topics.  These generally include those
  extensions which are binary, or of not any interest.  Contributed by
  Dave Clendenan <dave.clendenan@polycom.com>.
