@@ -14,6 +14,11 @@ Version 1.8.6
 * Added RSS support, so that the topic list screen now has an
   equivalent RSS view.  From Jason Remillard.
 
+* Added a "add other reviewers" link next to the Cc: field in the "add
+  comment" screen.  This allows the comment author to easily Cc all
+  the other reviewers of the topic, for important comments that needs
+  to be sent to all reviewers.
+
 Version 1.8.5
 
 * Complete support for VSS repositories.  Topics linked to a VSS
